# star-glauber-standalone

./: README.md  addNcollVsNpart.C  doAnalysisMaker.C  doFastGlauberMcMaker.C  doNbdFitMaker.C  doPlotMaker.C  run19_19p6GeV.root
StRoot/: CMakeLists.txt
StRoot/StCentralityMaker/: CMakeLists.txt  StCentrality.cxx  StCentralityMaker.cxx  StCentralityMakerLinkDef.h  StNbdFitMaker.cxx  StNbdFitMaker.h  StNegativeBinomial.cxx
StRoot/StFastGlauberMcMaker/: CMakeLists.txt  Nucleon.h  StFastGlauberMcMaker.cxx  StFastGlauberMcMakerLinkDef.h
StRoot/StGlauberAnalysisMaker/: CMakeLists.txt  StGlauberAnalysisMaker.cxx  StGlauberAnalysisMakerLinkDef.h  StGlauberCumulantHistogramMaker.cxx  StGlauberHistogramMaker.cxx  StGlauberPlotMaker.cxx
StRoot/StGlauberTree/: CMakeLists.txt  StGlauberTree.cxx  StGlauberTreeLinkDef.h
StRoot/StGlauberUtilities/: CMakeLists.txt  StGlauberUtilities.cxx  StGlauberUtilitiesLinkDef.h
getBestChi2_fromCat/: extractChi2Lines.sh  genMinChi2List.sh
